various fixes for overflow issues, media queries for smaller screens

--- a/client/src/pages/Art/Art.css
+++ b/client/src/pages/Art/Art.css
@@ -57,4 +57,5 @@
 
 .art-row {
     max-height: 12vh;
+    max-width: 100vw;
 }
